--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,15 @@
     "version": "1.0.0",
     "description": "Attention detection with content recommendations",
     "permissions": [
-        "storage"
+        "storage",
+        "tabs",
+        "scripting"
     ],
     "host_permissions": [
         "https://generativelanguage.googleapis.com/*",
-        "https://storage.googleapis.com/*"
+        "https://storage.googleapis.com/*", 
+        "https://*/*"
+
     ],
     "action": {
         "default_popup": "popup.html",
@@ -26,13 +30,20 @@
     "background": {
         "service_worker": "background.js"
     },
+    "content_scripts": [
+        {
+            "matches": ["https://*/*", "http://*/*"],
+            "js": ["content-script.js"],
+            "run_at": "document_start"
+        }
+    ],
     "content_security_policy": {
         "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
     },
     "web_accessible_resources": [
         {
             "resources": ["lib/mediapipe/wasm/*"],
-            "matches": []
+            "matches": ["<all_urls>"]
         }
     ]
 }
